-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 15, 16
-
Component/s: infrastructure
-
None
-
b04
-
windows
I saw two configure errors when I run configure script on WSL in Windows 10 May 2020 update as below:
1. wslpath could not convert the path of fixpath.exe
```
checking if fixpath can be created... /usr/bin/wslpath: /mnt/d/OpenJDK/jdk/build/windows-x86_64-server-fastdebug/configure-support/bin/fixpath.exe: No such file or directory
```
2. C4477 warning occurred in fixpath.c (Following messages is in Japanese locale, sorry)
```
D:/OpenJDK/jdk/make/src/native/fixpath.c(50): warning C4477: 'fprintf' : 書式文字列 '%s' には、型 'char *' の引数が必要 ですが、可変個引数 3 は型 'LPVOID' です
```
Since Windows 10 build 18945 [1], wslpath issue [2] has been fixed. I guess this is the cause of wslpath problem in configure script.
[1] https://docs.microsoft.com/ja-jp/windows/wsl/release-notes#build-18945
[2] https://github.com/microsoft/WSL/issues/4078
1. wslpath could not convert the path of fixpath.exe
```
checking if fixpath can be created... /usr/bin/wslpath: /mnt/d/OpenJDK/jdk/build/windows-x86_64-server-fastdebug/configure-support/bin/fixpath.exe: No such file or directory
```
2. C4477 warning occurred in fixpath.c (Following messages is in Japanese locale, sorry)
```
D:/OpenJDK/jdk/make/src/native/fixpath.c(50): warning C4477: 'fprintf' : 書式文字列 '%s' には、型 'char *' の引数が必要 ですが、可変個引数 3 は型 'LPVOID' です
```
Since Windows 10 build 18945 [1], wslpath issue [2] has been fixed. I guess this is the cause of wslpath problem in configure script.
[1] https://docs.microsoft.com/ja-jp/windows/wsl/release-notes#build-18945
[2] https://github.com/microsoft/WSL/issues/4078
- relates to
-
JDK-8248612 Back quotes and double quotes must not be escaped in: Cannot convert \"$unix_path\" to Windows path
-
- Resolved
-