8248526: configure script failed on WSL in May 2020 update

Reviewed-by: ihse