make/src/native/fixpath.c
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2014, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -32,7 +32,7 @@
 
 void report_error(char const * msg)
 {
-  LPVOID lpMsgBuf;
+  LPTSTR lpMsgBuf;
   DWORD dw = GetLastError();
 
   FormatMessage(
